feat(platinum): expose dataset identity API
